[package]
authors = ["pitust <piotr@stelmaszek.com>"]
edition = "2018"
name = "liboh"
version = "0.1.0"

[dependencies]
linked_list_allocator = "0.8.6"
[dependencies.serde]
default-features = false
features = ["alloc"]
version = "1.0.117"

[dependencies.postcard]
features = ["alloc"]
version = "0.5.1"

